refactor: eliminate SessionMessage and EntryDataConverter entirely
Modernized all 4 test importers to return List<EntryData> directly:
- AnthropicClientImporter: produces EntryData per content block
- CopilotClientImporter: AssistantBuffer redesigned around EntryData
- CodexClientImporter: direct EntryData construction per event
- OpenCodeClientImporter: per-part EntryData conversion

Updated all 4 round-trip tests to use EntryData assertions:
- Type-safe instanceof checks instead of role string comparison
- Direct property access instead of JsonObject part inspection
- Entry counts adjusted (parts now individual entries)

Deleted SessionMessage.java (55 lines) and EntryDataConverter.java
(201 lines) — zero callers remain anywhere in the codebase.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>